# repo-to-gpt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
src/: cli.rs  main.rs  prompt.rs
