[package]
name = "repo-to-gpt"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bruno"]
description = "A CLI tool to scan folders and export structured JSON for use with GPT models."
license = "BSD-3"
repository = "https://github.com/mbround18/repo-to-gpt"
keywords = ["CLI", "GPT", "JSON", "folder-scanning"]

[dependencies]
serde_json = "1.0.133"
clap = { version = "4.5.23", features = ["derive"] }
ignore = "0.4.23"